cmake_minimum_required(VERSION 2.6)
project(ar)
add_compile_options(-std=c++11)
find_package( OpenCV REQUIRED)
find_package( OpenGL REQUIRED)
find_package( GLUT REQUIRED)
include_directories("/usr/local/include" ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
add_executable(ar ar.cpp)
install(TARGETS ar RUNTIME DESTINATION bin)
target_link_libraries( ar ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS} )
